--- a/views/register.ejs
+++ b/views/register.ejs
@@ -46,6 +46,10 @@
           Confirm Password
           <input type="password" name="confirmPassword" id="confirmPassword">
         </label>
+        <label for="passcode">
+          Club Passcode
+          <input type="password" name="passcode" id="passcode">
+        </label>
         <button type="submit">Submit</button>
       </form>
 
